--- a/templates/user.html
+++ b/templates/user.html
@@ -5,7 +5,7 @@
     <table>
       <tr><th>id</th><th>name</th></tr>
       {% for user in users %}
-      <tr><td>{{user.id}}</td><td>{{user.first_name}} {{user.last_name}}</td></tr>
+      <tr><td>{{user.Id}}</td><td>{{user.firstName}} {{user.lastName}}</td></tr>
       {% endfor %}
     </table>
   </body>
